--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
   </main>
 
   <footer>
-    <a href="https://geduramc.com" target="_blank">By @geduramc &#9749;</a>
+    <a href="https://geduramc.com" target="_blank">By @geduramc</a>
   </footer>
 </body>
 <script type="module" src="/src/main.js"></script>
