fix: update api url

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -9,13 +8,11 @@
   <title>Config Manager - geduramc</title>
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
-
 <body>
   <header>
     <h1>Config Manager</h1>
     <p class="subtitle">{ <span class="key">'Public'</span>: <span class="value">'configuration variables'</span> }</p>
   </header>
-
   <main>
     <table>
       <thead>
@@ -30,11 +27,9 @@
       <tbody></tbody>
     </table>
   </main>
-
   <footer>
     <a href="https://geduramc.com" target="_blank">By @geduramc</a>
   </footer>
 </body>
-<script type="module" src="/src/main.js"></script>
-
+<script type="module" src="./src/main.js"></script>
 </html>
